finaliza aplicacao do usuario
